feat: map screen

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
     android:theme="@style/AppTheme"
   >
     <meta-data android:name="expo.modules.updates.EXPO_UPDATE_URL" android:value="YOUR-APP-URL-HERE"/>
-    <meta-data android:name="expo.modules.updates.EXPO_SDK_VERSION" android:value="YOUR-APP-SDK-VERSION-HERE"/>
+    <meta-data android:name="expo.modules.updates.EXPO_SDK_VERSION" android:value="YOUR-APP-SDK-VERSION-HERE" />
+    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyA99Co-6yPLodUPSJfO8vKc4ox02x8X_sc"/>
     <activity
       android:name=".MainActivity"
       android:label="@string/app_name"
