--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
@@ -31,6 +32,7 @@
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.13.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
