--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-camera": "^4.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.9.2",
